--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <ul>
-  <li *ngFor="let user of users">
-    {{user.name}}
-  </li>
+  <li><a routerLink="/users">users page</a></li>
+  <li><a routerLink="/posts">posts page</a></li>
 </ul>
+<router-outlet></router-outlet>
 
